Updated ActionbarSherlock and fixed bug on tablets